fix vim+tmux ESC interaction, add gsw, add gf, fix prompt shows ssh

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -42,8 +42,7 @@ set -g set-titles on          # set terminal title
 setw -g automatic-rename on   # rename window to reflect current program
 set -g renumber-windows on    # renumber windows when a window is closed
 
-# maximize current pane
-# bind + run 'cut -c3- ~/.tmux.conf | sh -s _maximize_pane "#{session_name}" #D'
+set -sg escape-time 10
 
 # plugins
 run-shell ~/.config/tmux/plugin/tmux-resurrect/resurrect.tmux
