add powerline to tmux

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -44,5 +44,7 @@ set -g renumber-windows on    # renumber windows when a window is closed
 
 set -sg escape-time 10
 
+source /usr/share/powerline/bindings/tmux/powerline.conf
+
 # plugins
 run-shell ~/.config/tmux/plugin/tmux-resurrect/resurrect.tmux
