--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -7,16 +7,16 @@ setw -g pane-base-index 1
 set -g mouse on
 
 # prefix
-set -g prefix `
-bind ` send-prefix
+set -g prefix '`'
+bind '`' send-prefix
 unbind C-b
 
 # change split
 unbind '"'
 unbind %
 unbind c
-bind '\' split-window -v -c "#{pane_current_path}"
-bind '|' split-window -h -c "#{pane_current_path}"
+bind -n M-'\' split-window -v -c "#{pane_current_path}"
+bind -n M-'|' split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 bind M-c new-window -c ~
 
@@ -27,16 +27,16 @@ set-option -g repeat-time 420
 bind r source-file ~/.config/tmux/tmux.conf
 
 # resize pane
-bind -r M-up resize-pane -U 5
-bind -r M-left resize-pane -L 5
-bind -r M-right resize-pane -R 5
-bind -r M-down resize-pane -D 5
-bind -r M-k select-pane -U
-bind -r M-h select-pane -L
-bind -r M-l select-pane -R
-bind -r M-j select-pane -D
-bind -r C-Tab next-window
-bind -r C-BTab previous-window
+bind -n M-up resize-pane -U 5
+bind -n M-left resize-pane -L 5
+bind -n M-right resize-pane -R 5
+bind -n M-down resize-pane -D 5
+bind -n M-k select-pane -U
+bind -n M-h select-pane -L
+bind -n M-l select-pane -R
+bind -n M-j select-pane -D
+bind -n C-Tab next-window
+bind -n C-BTab previous-window
 
 set -g set-titles on          # set terminal title
 setw -g automatic-rename on   # rename window to reflect current program
