--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -17,8 +17,8 @@ unbind %
 unbind c
 bind -n M-'\' split-window -v -c "#{pane_current_path}"
 bind -n M-'|' split-window -h -c "#{pane_current_path}"
-bind c new-window -c "#{pane_current_path}"
-bind M-c new-window -c ~
+bind -n M-c new-window -c "#{pane_current_path}"
+bind -n M-C new-window -c ~
 
 # fix repeat-time missing(?)
 set-option -g repeat-time 420
@@ -44,7 +44,7 @@ set -g renumber-windows on    # renumber windows when a window is closed
 
 set -sg escape-time 10
 
-source /usr/share/powerline/bindings/tmux/powerline.conf
+# source /usr/share/powerline/bindings/tmux/powerline.conf
 
 # plugins
 run-shell ~/.config/tmux/plugin/tmux-resurrect/resurrect.tmux
